# CEX-API-latency-monitor

./: .gitignore  README.md  generate_report.py  main.py  pyproject.toml  run_benchmarks.py
.benchmarks/Windows-CPython-3.13-64bit/: 0001_bitget.json  0002_bitget.json  0003_bitget.json  0004_okx.json  0005_okx.json
.github/workflows/: api_latency_measurement.yml  api_latency_report.yml
benchmark_results/: comprehensive_report_20250324_152350.html
benchmark_results/assets/css/: report.css
data/: bitget_latency_data.json  okx_latency_data.json
docs/: benchmark_report_latest.html  comprehensive_report_20250324_152350.html  comprehensive_report_20250324_152434.html  index.html
docs/assets/css/: report.css
monitor/: __init__.py  benchmark_core.py  bitget_latency.py  config.py  okx_latency.py  run_all_tests.py
scripts/: __init__.py  benchmark_core.py  bitget_latency.py  config.py  okx_latency.py
