[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "api-benchmarks"
version = "0.1.0"
description = "API Latency Benchmark Suite for Cryptocurrency Exchanges"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
dependencies = [
    "requests>=2.28.0",
    "pytest>=7.0.0",
    "pytest-benchmark>=4.0.0",
    "matplotlib>=3.5.0",
    "numpy>=1.20.0",
    "pandas>=1.3.0",
]

[project.scripts]
run-benchmarks = "run_benchmarks:main"

[tool.setuptools]
packages = ["scripts"]
py-modules = ["run_benchmarks"]

[tool.pytest.ini_options]
testpaths = ["scripts"]
python_files = "*_latency.py"
addopts = "--benchmark-columns=min,mean,max,stddev"

[tool.pytest-benchmark]
warmup = true
min_rounds = 5
min_time = 0.1
max_time = 0.5
save = true
save-data = true
histogram = true
